# pkg/reconciler/taskrun/resources/taskspec.go
@@ -20,11 +20,17 @@ import (
 	"context"
 	"errors"
 	"fmt"
+	"strings"
 
 	v1 "github.com/tektoncd/pipeline/pkg/apis/pipeline/v1"
+	"github.com/tektoncd/pipeline/pkg/apis/pipeline/v1alpha1"
+	"github.com/tektoncd/pipeline/pkg/apis/pipeline/v1beta1"
+	clientset "github.com/tektoncd/pipeline/pkg/client/clientset/versioned"
 	resolutionutil "github.com/tektoncd/pipeline/pkg/internal/resolution"
+	remoteresource "github.com/tektoncd/pipeline/pkg/resolution/resource"
 	"github.com/tektoncd/pipeline/pkg/trustedresources"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	"k8s.io/client-go/kubernetes"
 )
 
 // ResolvedTask contains the data that is needed to execute
@@ -47,7 +53,8 @@ type GetTaskRun func(string) (*v1.TaskRun, error)
 // GetTaskData will retrieve the Task metadata and Spec associated with the
 // provided TaskRun. This can come from a reference Task or from the TaskRun's
 // metadata and embedded TaskSpec.
-func GetTaskData(ctx context.Context, taskRun *v1.TaskRun, getTask GetTask) (*resolutionutil.ResolvedObjectMeta, *v1.TaskSpec, error) {
+func GetTaskData(ctx context.Context, taskRun *v1beta1.TaskRun, getTask GetTask, k8s kubernetes.Interface, tekton clientset.Interface,
+	requester remoteresource.Requester, verificationpolicies []*v1alpha1.VerificationPolicy) (*resolutionutil.ResolvedObjectMeta, *v1beta1.TaskSpec, error) {
 	taskMeta := metav1.ObjectMeta{}
 	taskSpec := v1.TaskSpec{}
 	var refSource *v1.RefSource
@@ -85,6 +92,62 @@ func GetTaskData(ctx context.Context, taskRun *v1.TaskRun, getTask GetTask) (*re
 		return nil, nil, fmt.Errorf("taskRun %s not providing TaskRef or TaskSpec", taskRun.Name)
 	}
 
+	// TODO: Expand Steps here
+	steps := []v1beta1.Step{}
+	for _, step := range taskSpec.Steps {
+		var s v1beta1.Step
+		if step.StepRef != nil {
+			name := step.Name
+			localStep := &LocalStepRefResolver{
+				Namespace:    taskRun.Namespace,
+				Tektonclient: tekton,
+			}
+			referencedStep, _, err := localStep.GetStep(ctx, step.StepRef.Name)
+			if err != nil {
+				return nil, nil, err
+			}
+			s = referencedStep.StepSpec()
+			s.Name = name
+			// apply mappings
+			for _, p := range step.Params {
+				patterns := []string{
+					"params.%s",
+					"params[%q]",
+					"params['%s']",
+				}
+				for _, pattern := range patterns {
+					s.Script = strings.Replace(s.Script, fmt.Sprintf(pattern, p.Name), fmt.Sprintf(pattern, p.Value), -1)
+					for _, c := range s.Command {
+						c = strings.Replace(c, fmt.Sprintf(pattern, p.Name), fmt.Sprintf(pattern, p.Value), -1)
+					}
+					for _, a := range s.Args {
+						a = strings.Replace(a, fmt.Sprintf(pattern, p.Name), fmt.Sprintf(pattern, p.Value), -1)
+					}
+				}
+			}
+			for _, r := range step.Results {
+				patterns := []string{
+					"results.%s",
+					"results[%q]",
+					"results['%s']",
+				}
+				for _, pattern := range patterns {
+					s.Script = strings.Replace(s.Script, fmt.Sprintf(pattern, r.Name), fmt.Sprintf(pattern, r.Value), -1)
+					for _, c := range s.Command {
+						c = strings.Replace(c, fmt.Sprintf(pattern, r.Name), fmt.Sprintf(pattern, r.Value), -1)
+					}
+					for _, a := range s.Args {
+						a = strings.Replace(a, fmt.Sprintf(pattern, r.Name), fmt.Sprintf(pattern, r.Value), -1)
+					}
+				}
+			}
+			steps = append(steps, s)
+		} else {
+			steps = append(steps, step)
+		}
+	}
+	// replacing steps
+	taskSpec.Steps = steps
 	taskSpec.SetDefaults(ctx)
 	return &resolutionutil.ResolvedObjectMeta{
 		ObjectMeta:         &taskMeta,
